@@ -7,6 +7,7 @@ BUGFIXES
 
 
 IMPROVEMENTS
+23-10-05	Added support for observers with SGL_Oberserver and SGL_Observable
 21-10-05    Grouped pre + post processing tasks together by name, renamed Tasks.php 
             to Process.php to respect namespace
 20-10-05    Added php4/5 compatible delegator class
